# autodiff-with-dual-numbers

./: README.md
dual_autodiff/: .gitignore  pyproject.toml  requirements.txt
dual_autodiff/docs/: Makefile  Question_5.ipynb  conf.py  dual_autodiff.ipynb  index.rst
dual_autodiff/docs/rst/: example.rst  methods.rst  notebook.rst
dual_autodiff/dual_autodiff/: __init__.py  dual.py  main.py
dual_autodiff/tests/: test_dual.py
dual_autodiff_x/: pyproject.toml  setup.py
dual_autodiff_x/dual_autodiff_x/: __init__.py  dual.c  dual.cp313-win_amd64.pyd  dual.pyx
wheels/: dual_autodiff_x-0.0.8-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.8-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
