[build-system]
requires = ["setuptools","Cython", "wheel", "build"] 
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
version = '0.0.8'
description = "A Cythonized package that performs automartic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Haya Ejjawi", email = "he308@cam.ac.uk" }]
keywords = ["dual", "automatic differentiation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]


